Fix some idea warning